Kubernetes/externaldns/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-test
  name: nginx-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.coffee-bean.xyz
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-test
