Kubernetes/externaldns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx-test.coffee-bean.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test
            port: 
              number: 80
  tls:
    - hosts:
      - nginx-test.coffee-bean.xyz
      secretName: nginx-tls
